función con ambas rutas

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>RICK & MORTY</h1>
-    <label for="pokemonName">Introduce un personaje</label>
+    <label for="characterName">Introduce un personaje</label>
     <input type="text" id="characterName" placeholder="Rick"/>
     <button onclick="getCharacterInfo()">Obtener información</button>
     <div id="characterInfo"></div>
-    <script src="./js/script.js"></script>
+    <script src="./js/scritp.js"></script>
 </body>
 </html>
